chore: update dependencies
- chore: simplify TypeScript config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,3 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "strict": true,
-    "resolveJsonModule": true,
-    "types": ["node"],
-    "baseUrl": ".",
-    "paths": {
-      "~/*": ["./*"]
-    }
-  }
+  "extends": "./.nuxt/tsconfig.json"
 }
