--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "start": "node .output/server/index.mjs"
   },
   "dependencies": {
-    "@vueuse/core": "^6.6.2",
-    "motion": "^10.3.2",
-    "nuxt3": "latest"
+    "@vueuse/core": "^6.7.3",
+    "motion": "^10.4.0",
+    "nuxt3": "^3.0.0-27245396.550a9f2"
   },
   "devDependencies": {
     "@fontsource/inter": "^4.5.0",
-    "@iconify/json": "^1.1.416",
+    "@iconify/json": "^1.1.417",
     "@windicss/plugin-interaction-variants": "^1.0.0",
     "@windicss/plugin-scrollbar": "^1.2.3",
-    "nuxt-windicss": "^2.0.1",
+    "nuxt-windicss": "^2.0.4",
     "prettier": "~2.2.1",
     "unplugin-icons": "^0.12.16",
     "windicss": "^3.1.9"
