--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   "devDependencies": {
     "@fontsource/inter": "^4.5.1",
     "@iconify/json": "^1.1.427",
+    "@types/js-yaml": "^4.0.4",
+    "@types/markdown-it": "^12.2.3",
     "@unocss/nuxt": "^0.9.3",
     "@vueuse/core": "^6.8.0",
     "@windicss/plugin-interaction-variants": "^1.0.0",
     "@windicss/plugin-scrollbar": "^1.2.3",
+    "gray-matter": "^4.0.3",
+    "js-yaml": "^4.1.0",
+    "markdown-it": "^12.2.0",
+    "markdown-it-shiki": "^0.3.0",
     "motion": "^10.4.0",
     "nuxt-windicss": "^2.0.12",
     "nuxt3": "latest",
     "prettier": "~2.2.1",
     "unocss": "^0.9.3",
+    "unplugin": "^0.2.21",
     "vue-motion-one": "^0.1.6",
     "windicss": "^3.2.1"
   }
