--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@windicss/plugin-interaction-variants": "^1.0.0",
     "@windicss/plugin-scrollbar": "^1.2.3",
     "gray-matter": "^4.0.3",
-    "js-yaml": "^4.1.0",
+    "htmlparser2": "^7.2.0",
     "markdown-it": "^12.2.0",
     "markdown-it-shiki": "^0.3.0",
     "motion": "^10.4.0",
