--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   },
   "devDependencies": {
     "@fontsource/inter": "^4.5.1",
-    "@iconify/json": "^1.1.433",
+    "@iconify/json": "^1.1.453",
     "@types/markdown-it": "^12.2.3",
-    "@unocss/nuxt": "^0.12.9",
-    "@vueuse/core": "^6.9.2",
+    "@unocss/nuxt": "^0.20.4",
+    "@vueuse/core": "^7.5.3",
     "@windicss/plugin-interaction-variants": "^1.0.0",
     "@windicss/plugin-scrollbar": "^1.2.3",
     "gray-matter": "^4.0.3",
     "htmlparser2": "^7.2.0",
-    "markdown-it": "^12.2.0",
+    "markdown-it": "^12.3.1",
     "markdown-it-shiki": "^0.3.0",
-    "motion": "^10.4.0",
-    "nuxt-windicss": "^2.0.12",
+    "motion": "^10.5.0",
+    "nuxt-windicss": "^2.2.2",
     "nuxt3": "latest",
-    "prettier": "~2.2.1",
-    "unocss": "^0.12.9",
-    "unplugin": "^0.2.21",
-    "windicss": "^3.2.1"
+    "prettier": "^2.5.1",
+    "unocss": "0.20.4",
+    "unplugin": "^0.3.0",
+    "windicss": "^3.4.2"
   }
 }
