--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@fontsource/inter": "^4.5.1",
-    "@iconify/json": "^1.1.459",
+    "@iconify/json": "^1.1.460",
     "@types/markdown-it": "^12.2.3",
     "@types/nprogress": "^0.2.0",
     "@unocss/nuxt": "^0.22.5",
@@ -20,11 +20,11 @@
     "gray-matter": "^4.0.3",
     "htmlparser2": "^7.2.0",
     "markdown-it": "^12.3.2",
-    "markdown-it-shiki": "^0.3.0",
-    "motion": "^10.5.2",
+    "motion": "^10.6.0",
     "nuxt-windicss": "^2.2.2",
     "nuxt3": "latest",
     "prettier": "^2.5.1",
+    "shiki": "^0.10.0",
     "unocss": "^0.22.5",
     "unplugin": "^0.3.1",
     "windicss": "^3.4.3"
