--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nuxt-windicss": "^2.2.4",
     "nuxt3": "latest",
     "prettier": "^2.5.1",
+    "sass": "^1.49.7",
     "shiki": "^0.10.0",
     "unocss": "^0.24.3",
     "unplugin": "^0.3.2",
