--- a/package.json
+++ b/package.json
@@ -10,23 +10,22 @@
   },
   "devDependencies": {
     "@fontsource/inter": "^4.5.4",
-    "@iconify/json": "^2.0.36",
+    "@iconify/json": "^2.1.3",
     "@types/markdown-it": "^12.2.3",
-    "@types/nprogress": "^0.2.0",
-    "@unocss/nuxt": "^0.24.3",
-    "@vueuse/nuxt": "^7.6.1",
+    "@unocss/nuxt": "^0.25.0",
+    "@vueuse/nuxt": "^7.6.2",
     "@windicss/plugin-interaction-variants": "^1.0.0",
     "@windicss/plugin-scrollbar": "^1.2.3",
     "gray-matter": "^4.0.3",
     "htmlparser2": "^7.2.0",
     "markdown-it": "^12.3.2",
     "motion": "^10.6.2",
-    "nuxt-windicss": "^2.2.4",
-    "nuxt3": "latest",
+    "nuxt-windicss": "^2.2.5",
+    "nuxt3": "3.0.0-27413936.9734856",
     "prettier": "^2.5.1",
-    "sass": "^1.49.7",
-    "shiki": "^0.10.0",
-    "unocss": "^0.24.3",
+    "sass": "^1.49.8",
+    "shiki": "^0.10.1",
+    "unocss": "^0.25.0",
     "unplugin": "^0.3.2",
     "windicss": "^3.4.3"
   }
