--- a/package.json
+++ b/package.json
@@ -10,24 +10,20 @@
   },
   "devDependencies": {
     "@fontsource/inter": "^4.5.4",
-    "@iconify/json": "^2.1.3",
+    "@iconify/json": "^2.1.4",
     "@nuxt/kit-edge": "npm:@nuxt/kit-edge@latest",
     "@types/markdown-it": "^12.2.3",
-    "@unocss/nuxt": "^0.25.0",
+    "@unocss/nuxt": "^0.26.2",
     "@vueuse/nuxt": "^7.6.2",
-    "@windicss/plugin-interaction-variants": "^1.0.0",
-    "@windicss/plugin-scrollbar": "^1.2.3",
     "gray-matter": "^4.0.3",
     "htmlparser2": "^7.2.0",
     "markdown-it": "^12.3.2",
     "motion": "^10.6.2",
-    "nuxt-windicss": "^2.2.5",
-    "nuxt3": "3.0.0-27413936.9734856",
+    "nuxt3": "latest",
     "prettier": "^2.5.1",
     "sass": "^1.49.8",
     "shiki": "^0.10.1",
-    "unocss": "^0.25.0",
-    "unplugin": "^0.3.2",
-    "windicss": "^3.4.3"
+    "unocss": "^0.26.2",
+    "unplugin": "^0.3.2"
   }
 }
