refactor: use @nuxt/kit dep name

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@fontsource/inter": "^4.5.4",
     "@iconify/json": "^2.1.4",
-    "@nuxt/kit-edge": "npm:@nuxt/kit-edge@latest",
+    "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
     "@types/markdown-it": "^12.2.3",
     "@unocss/nuxt": "^0.26.2",
     "@vueuse/nuxt": "^7.6.2",
