--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "@fontsource/inter": "^4.5.4",
-    "@iconify/json": "^2.1.11",
+    "@fontsource/inter": "^4.5.5",
+    "@iconify/json": "^2.1.14",
     "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
     "@types/markdown-it": "^12.2.3",
-    "@unocss/nuxt": "^0.27.2",
+    "@unocss/nuxt": "^0.28.0",
     "@vueuse/nuxt": "^7.7.1",
     "gray-matter": "^4.0.3",
     "htmlparser2": "^7.2.0",
+    "knitwork": "^0.1.1",
     "markdown-it": "^12.3.2",
     "motion": "^10.6.2",
     "nuxt3": "latest",
     "prettier": "^2.5.1",
     "shiki": "^0.10.1",
-    "unocss": "^0.27.2",
+    "unocss": "^0.28.0",
     "unplugin": "^0.3.3"
   }
 }
