--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "@fontsource/inter": "^4.5.5",
-    "@iconify/json": "^2.1.17",
+    "@fontsource/inter": "^4.5.7",
+    "@iconify/json": "^2.1.19",
     "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
     "@types/markdown-it": "^12.2.3",
-    "@unocss/nuxt": "^0.29.5",
+    "@unocss/nuxt": "^0.30.2",
     "@vueuse/nuxt": "^8.1.2",
     "gray-matter": "^4.0.3",
     "htmlparser2": "^7.2.0",
@@ -23,7 +23,9 @@
     "nuxt3": "latest",
     "prettier": "^2.6.0",
     "shiki": "^0.10.1",
-    "unocss": "^0.29.5",
+    "three": "^0.138.3",
+    "troisjs": "^0.3.4",
+    "unocss": "^0.30.2",
     "unplugin": "^0.5.2"
   }
 }
