--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "devDependencies": {
     "@fontsource/inter": "^4.5.7",
-    "@iconify/json": "^2.1.20",
+    "@iconify/json": "^2.1.21",
     "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
     "@types/markdown-it": "^12.2.3",
-    "@unocss/nuxt": "^0.30.6",
+    "@types/three": "^0.139.0",
+    "@unocss/nuxt": "^0.30.7",
     "@vueuse/nuxt": "^8.2.0",
     "gray-matter": "^4.0.3",
     "htmlparser2": "^7.2.0",
@@ -23,9 +24,8 @@
     "nuxt3": "latest",
     "prettier": "^2.6.1",
     "shiki": "^0.10.1",
-    "three": "^0.138.3",
-    "troisjs": "^0.3.4",
-    "unocss": "^0.30.6",
-    "unplugin": "^0.5.2"
+    "three": "^0.139.0",
+    "unocss": "^0.30.7",
+    "unplugin": "^0.6.0"
   }
 }
