chore: update deps
- refactor: use different type import syntax

--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   },
   "devDependencies": {
     "@fontsource/inter": "^4.5.7",
-    "@iconify/json": "^2.1.21",
-    "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
+    "@iconify/json": "^2.1.31",
+    "@nuxt/kit": "^3.0.0-rc.1",
     "@types/markdown-it": "^12.2.3",
     "@types/three": "^0.139.0",
-    "@unocss/nuxt": "^0.30.7",
-    "@vueuse/nuxt": "^8.2.0",
+    "@unocss/nuxt": "^0.31.13",
+    "@vueuse/nuxt": "^8.3.1",
     "gray-matter": "^4.0.3",
-    "htmlparser2": "^7.2.0",
+    "htmlparser2": "^8.0.0",
     "knitwork": "^0.1.1",
-    "markdown-it": "^12.3.2",
-    "motion": "^10.7.0",
-    "nuxt3": "latest",
-    "prettier": "^2.6.1",
+    "markdown-it": "^13.0.0",
+    "motion": "^10.7.2",
+    "nuxt": "^3.0.0-rc.1",
+    "prettier": "^2.6.2",
     "shiki": "^0.10.1",
-    "three": "^0.139.0",
-    "unocss": "^0.30.7",
-    "unplugin": "^0.6.0"
+    "three": "^0.139.2",
+    "unocss": "^0.31.13",
+    "unplugin": "^0.6.2"
   }
 }
