--- a/package.json
+++ b/package.json
@@ -9,23 +9,16 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "@fontsource/inter": "^4.5.7",
-    "@iconify/json": "^2.1.31",
-    "@nuxt/kit": "^3.0.0-rc.1",
-    "@types/markdown-it": "^12.2.3",
-    "@types/three": "^0.139.0",
-    "@unocss/nuxt": "^0.31.13",
-    "@vueuse/nuxt": "^8.3.1",
-    "gray-matter": "^4.0.3",
-    "htmlparser2": "^8.0.0",
-    "knitwork": "^0.1.1",
-    "markdown-it": "^13.0.0",
-    "motion": "^10.7.2",
-    "nuxt": "^3.0.0-rc.1",
+    "@fontsource/inter": "^4.5.10",
+    "@iconify/json": "^2.1.50",
+    "@nuxt/content": "^2.0.0",
+    "@types/three": "^0.140.0",
+    "@unocss/nuxt": "^0.34.1",
+    "@vueuse/nuxt": "^8.5.0",
+    "motion": "^10.9.0",
+    "nuxt": "^3.0.0-rc.3",
     "prettier": "^2.6.2",
-    "shiki": "^0.10.1",
-    "three": "^0.139.2",
-    "unocss": "^0.31.13",
-    "unplugin": "^0.6.2"
+    "three": "^0.141.0",
+    "unocss": "^0.34.1"
   }
 }
