--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   },
   "devDependencies": {
     "@fontsource/inter": "^4.5.10",
-    "@iconify/json": "^2.1.50",
-    "@nuxt/content": "^2.0.0",
+    "@iconify/json": "^2.1.54",
+    "@nuxt/content": "^2.0.1",
     "@types/three": "^0.140.0",
-    "@unocss/nuxt": "^0.34.1",
-    "@vueuse/nuxt": "^8.5.0",
-    "motion": "^10.9.0",
+    "@unocss/nuxt": "^0.37.1",
+    "@vueuse/nuxt": "^8.6.0",
+    "motion": "^10.10.0",
     "nuxt": "^3.0.0-rc.3",
     "prettier": "^2.6.2",
+    "sirv": "^2.0.2",
     "three": "^0.141.0",
-    "unocss": "^0.34.1"
+    "unocss": "^0.37.1"
   }
 }
