--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "website",
   "private": true,
   "license": "GPL-3.0",
-  "packageManager": "pnpm@7.2.1",
+  "packageManager": "pnpm@7.3.0",
   "scripts": {
     "fmt": "prettier --write .",
     "dev": "nuxi dev",
@@ -11,16 +11,18 @@
   },
   "devDependencies": {
     "@fontsource/inter": "^4.5.11",
-    "@iconify/json": "^2.1.65",
+    "@iconify/json": "^2.1.68",
     "@nuxt/content": "^2.0.1",
+    "@types/nprogress": "^0.2.0",
     "@types/three": "^0.141.0",
-    "@unocss/nuxt": "^0.39.3",
+    "@unocss/nuxt": "^0.41.1",
     "@vueuse/nuxt": "^8.7.5",
-    "motion": "^10.10.0",
+    "motion": "^10.11.0",
+    "nprogress": "^0.2.0",
     "nuxt": "^3.0.0-rc.4",
     "prettier": "^2.7.1",
     "sirv": "^2.0.2",
     "three": "^0.141.0",
-    "unocss": "^0.39.3"
+    "unocss": "^0.41.1"
   }
 }
